Modify homepage url in package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b-manitas",
-  "homepage": "https://b-manitas.github.io/",
+  "homepage": "https://www.b-manitas.fr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
