Revert "Modify homepage url in package"
This reverts commit 8331723f92b9433f8596723eaa3f8bdead394dfb.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b-manitas",
-  "homepage": "https://www.b-manitas.fr",
+  "homepage": "https://b-manitas.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
